swiper-container calc()사용 at css

--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
     </div>
   </section>
 
+  <!-- NOTICE -->
   <section class="notice">
     <div class="notice-line">
       <div class="bg-left"></div>
@@ -437,6 +438,12 @@
             <div class="material-icons">upload</div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="promotion">
+      <div class="swiper-container">
+        TEST!
       </div>
     </div>
   </section>
