--- a/index.html
+++ b/index.html
@@ -548,6 +548,13 @@
       </div>
     </div>
   </section>
+
+  <!-- RESERVE STORE -->
+  <section class="reserve-store">
+    <div class="inner">
+      
+    </div>
+  </section>
 </body>
 
 </html>
