--- a/index.html
+++ b/index.html
@@ -447,23 +447,23 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
-            <a href="javascript:void(0)"class="btn">자세히 보기</a>
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
           <div class="swiper-slide">
             <img src="./images/promotion_slide2.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
-            <a href="javascript:void(0)"class="btn">자세히 보기</a>
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
           <div class="swiper-slide">
             <img src="./images/promotion_slide3.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
-            <a href="javascript:void(0)"class="btn">자세히 보기</a>
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
           <div class="swiper-slide">
             <img src="./images/promotion_slide4.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
-            <a href="javascript:void(0)"class="btn">자세히 보기</a>
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
           <div class="swiper-slide">
             <img src="./images/promotion_slide5.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
-            <a href="javascript:void(0)"class="btn">자세히 보기</a>
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
           </div>
         </div>
       </div>
@@ -506,7 +506,7 @@
 
   <!-- SEASON PRODUCT -->
   <section class="season-product">
-    
+
     <div class="inner">
       <img src="./images/floating3.png" alt="Icon" class="floating floating3">
       <img src="./images/season_product_image.png" alt="" class="product">
@@ -525,15 +525,15 @@
   <section class="reserve-coffee">
     <div class="inner">
       <img src="./images/reserve_logo.png" alt="" class="reserve-logo">
-    <div class="text-group">
-      <img src="./images/reserve_text.png" alt="" class="description">
-      <div class="more">
-        <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
+      <div class="text-group">
+        <img src="./images/reserve_text.png" alt="" class="description">
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
+        </div>
       </div>
-    </div>
-    <img src="./images/reserve_image.png" alt="" class="product">
+      <img src="./images/reserve_image.png" alt="" class="product">
 
-  </div>
+    </div>
   </section>
 
   <!-- PICK YOUR FAVORITE -->
@@ -552,7 +552,15 @@
   <!-- RESERVE STORE -->
   <section class="reserve-store">
     <div class="inner">
-      
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="">
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="">
+          <a href="javascript:void(0)" class="btn">매장안내</a>
+        </div>
+      </div>
     </div>
   </section>
 </body>
