awards and swiper_btn of awards

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
   <!-- ScrollMagin -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
+    integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
@@ -578,8 +580,55 @@
         <img src="./images/find_store_text1.png" alt="" class="title back-to-position to-left delay-0">
         <img src="./images/find_store_text2.png" alt="" class="description back-to-position to-left delay-1">
         <div class="more back-to-position to-left delay-2">
-          <a href="javascript:void(0)" class="btn">매장찾기</a> 
+          <a href="javascript:void(0)" class="btn">매장찾기</a>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- AWARDS -->
+  <section class="awards">
+    <div class="inner">
+
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./images/awards_slide1.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide2.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide3.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide4.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide5.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide6.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide7.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide8.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide9.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide10.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="swiper-prev">
+        <div class="material-icons">arrow_back</div>
+      </div>
+      <div class="swiper-next">
+        <div class="material-icons">arrow_forward</div>
       </div>
     </div>
   </section>
